Multi-stage building third step added