@@ -3,10 +3,31 @@ FROM gradle:8.11.1-jdk21 as builder
 RUN mkdir job4j_devops
 WORKDIR /job4j_devops
 COPY . .
+# build skipping tests
 RUN gradle clean build -x test
+# unzip to current directory
+RUN jar xf /job4j_devops/build/libs/DevOps-1.0.0.jar
+# analyzing class and module deps - leave needed, skip redundant / outdated - all it collects in deps.info
+RUN jdeps --ignore-missing-deps -q \
+    --recursive \
+    --multi-release 21 \
+    --print-module-deps \
+    --class-path 'BOOT-INF/lib/*' \
+    /job4j_devops/build/libs/DevOps-1.0.0.jar > deps.info
+# adds modules from deps.info, remove debug logic from JRE (decreasing its size), compressing max (zip)
+# exclude header files and man pages, forms output directory
+RUN jlink \
+    --add-modules $(cat deps.info) \
+    --strip-debug
+    --compress 2 \
+    --no-header-files \
+    --no-man-pages \
+    --output /slim-jre
 
-# base openjdk and run jar from prev step
-FROM openjdk:21-ea-slim-bullseye
-COPY --from=builder /job4j_devops/build/libs/DevOps-1.0.0.jar DevOps-1.0.0.jar
-EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "build/libs/DevOps-1.0.0.jar"]
+# creates final image
+FROM debian:bookworm-slim
+ENV JAVA_HOME /user/java/jdk21
+ENV PATH $JAVA_HOME/bin:$PATH
+COPY --from=builder /slim-jre $JAVA_HOME
+COPY --from=builder /job4j_devops/build/libs/DevOps-1.0.0.jar .
+ENTRYPOINT java -jar DevOps-1.0.0.jar
